--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
-    "sdkVersion": "21.0.0"
+   "name": "Copenhagen Afterhour",
+   "icon": "./src/assets/logo.png",
+   "version": "0.0.1",
+   "slug": "your-app-slug",
+   "sdkVersion": "21.0.0",
+   "ios": {
+     "bundleIdentifier": "com.cphafterhour.copenhagenafterhour"
+   },
+   "android": {
+     "package": "com.cphafterhour.copenhagenafterhour"
+   }
   }
 }
