--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "eslint-config-rallycoding": "^3.2.0",
     "expo": "^21.0.0",
     "lodash": "^4.17.4",
