--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@expo/vector-icons": "^6.2.0",
+    "@expo/vector-icons": "^6.2.2",
     "jest-expo": "^21.0.2",
     "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
@@ -20,13 +20,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "auth0-js": "^9.0.0",
     "axios": "^0.17.1",
     "eslint-config-rallycoding": "^3.2.0",
     "expo": "^21.0.0",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
-    "react-native-elements": "^0.18.2",
-    "react-navigation": "^1.0.0-beta.19"
+    "react-native-elements": "^0.18.5",
+    "react-navigation": "^1.0.0-beta.22"
   }
 }
